# bottie

./: .travis.yml  CMakeLists.txt  README.md
src/: main.c
src/bottie_service/: Makefile  bottie.py
src/bottie_service/etc/systemd/system/: bottie.service
src/ear/: Makefile  ear.py
src/ear/etc/systemd/system/: ear.service
src/lip_service/: Makefile  lip_service.py
src/lip_service/etc/systemd/system/: lip_service.service
src/recognizer/: Makefile  recognizer.py
src/recognizer/etc/systemd/system/: recognizer.service
src/recognizer/usr/share/recognizer/model/en-us/: cmudict-en-us.dict
